styles.css
*, *::before, *::after {
    box-sizing: border-box;
}

body {
    margin: 0;
    background-color: var(--background-color);
    position: relative;
    overflow: hidden;
}

:root {
    --hue : 200;
    --saturation: 50%;
    --foreground-color: hsl(var(--hue), var(--saturation), 80%);
    --background-color: hsl(var(--hue), var(--saturation), 20%);
}

.scores {
    display: flex;
    flex-direction: row;
    width: 100vw;
    height: 10vh;
    justify-content: center;
    align-items: center;
    font-size: 3rem;
    font-weight: 600;
    color: var(--foreground-color)
}

.score {
    padding: 0 1.5rem;
}

#welcome {
    --welcome: "block";
    --win: "none";
    --lose: "none";
    position: absolute;
    top: 50vh;
    right: 50vw;
    width: 600px;
    height: 400px;
    transform: translateX(50%) translateY(-50%);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: gray;
    font-family: monospace;
    padding: 2rem 4rem;
    border: solid 5px #000;
    border-radius: 10px;
    & h2 {
        color: white;
        font-size: 1.8rem;
        text-align: center;
    }

    & h4 {
        color: white;
        text-align: center;
        font-size: 1.4rem;
    }

    & ul {
        list-style-type: none;
        list-style-position: outside;
        display: flex;
        flex-direction: row;
        padding: 0;

        & li {
            padding: 2rem;
            color: white;
            font-size: 1.2rem;
            background-color: darkgray;
        }

        & li:hover {
            background-color: rgb(60,60,60);
            cursor: pointer;
        }

        & li:active {
            background-color: rgb(50,50,50);
            cursor: pointer;
        }

        & li:first-child {
            border-top-left-radius: 20px;
            border-bottom-left-radius: 20px;
        }

        & li:last-child {
            border-top-right-radius: 20px;
            border-bottom-right-radius: 20px;
        }
    }

    & #welcome-header {
        display: block;
    }
    & #win-header {
        display: none;
    }
    & #lose-header {
        display: none;
    }


}



.paddle {
    --position : 50;
    width: 2vh;
    height: 14vh;
    background-color: var(--foreground-color);
    position: absolute;
    top: calc(var(--position) * 1vh)
}

.player {
    left: 1vw;
    /* top: 50vh; */
    transform: translateY(-50%);
}

.computer {
    right: 1vw;
    /* top: 50vh; */
    transform: translateY(-50%);
}

#ball {
    --x: 50;
    --y: 50;
    height: 2.3vh;
    width: 2.3vh;
    border-radius: 50%;
    background-color: var(--foreground-color);
    position: absolute ;
    top: calc(var(--y) * 1vh);
    left: calc(var(--x) * 1vw);
    transform: translate(-50%, -50%);
}

#mushroom {
    --x: -20;
    --y: -20;
    height: 48px;
    width: 48px;
    position: absolute;
    top: calc(var(--y)*1vh);
    left: calc(var(--x)*1vw);
}

#mirror {
    --x: -20;
    --y: -20;
    height: 48px;
    width: 48px;
    position: absolute;
    top: calc(var(--y)*1vh);
    left: calc(var(--x)*1vw);
}

#banana {
    --x: -20;
    --y: -20;
    height: 48px;
    width: 48px;
    position: absolute;
    top: calc(var(--y)*1vh);
    left: calc(var(--x)*1vw);
}

